# mitten

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
backend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  README.md  README_TESTING.md  RENDER_DEPLOYMENT.md  build-fixed.sh  build.sh  main.py  package.json  pyproject.toml  render.yaml  requirements.txt  simple-build.sh  test_api_speed.py  test_fast_api.py  test_fast_summary.py  test_sample_approach.py
backend/app/: .env.example  __init__.py  main.py  pyproject.toml  requirements.txt
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: analysis.py  enviducate.py  health.py  query.py
backend/app/core/: config.py
backend/app/schemas/: analysis.py  enviducate.py  query.py
backend/app/services/: enviducate_service.py  enviducate_service_summary.py  gee_service.py  gemini_service.py  leafmap_service.py
backend/app/src/app/: main.py
backend/app/src/app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/src/app/api/v1/: charities.py  endpoint.py  locations.py  parse.py  router.py  summary.py
backend/app/src/app/core/: config.py
backend/app/src/app/models/: schemas.py
backend/scripts/: Michigan_Gas_Storage_Fields.geojson  README.md  batch_process_geojson.py  config.json  geojson_processor.py  geojson_to_mockdata.js  simple_geojson_converter.js  simple_geojson_converter_cjs.js
backend/scripts/data/input/: README.md  sample_michigan_data.geojson
backend/scripts/data/output/: FCMPSamplingData_8481043040966580363_processed.json  README.md  processing_summary.json  sample_michigan_data_processed.json  sample_output.json
frontend/: package.json  pnpm-lock.yaml
frontend/prisma/: schema.prisma
frontend/public/data/: EcoliRelatedNPDES.json  coordinates_deforestation.json  coordinates_fire.json  mockData_gasFields.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: leafletIcon.tsx
frontend/src/styles/: globals.css
map-visualization/backend/: main.py  pyproject.toml
map-visualization/backend/static/: michigan_gee_debug_20250927_200311.html  michigan_gee_debug_years_20250927_200128.html  michigan_gee_leafmap_2d_20250927_200218.html  michigan_gee_leafmap_2d_20250927_200502.html  michigan_gee_leafmap_2d_20250927_200612.html  nlp_deforestation_ann_arbor_20250927_202621.html
web/: package.json  pnpm-lock.yaml
(+22 files in other folders)
